...

    static let serversWindowID = "servers"
    static let serverWindowID = "server"

    var body: some Scene {
        #if os(macOS)
        Window("Servers", id: Self.serversWindowID) {
            ServerListView()
                .environment(model)
        }
        .defaultSize(width: 420, height: 320)
        .commands {
            CommandGroup(replacing: .newItem) {
...
